# Sygnomics_ORACLE

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEMO_SCRIPT.md  Dockerfile  LICENSE  OutlinePrompt03-30-2026.docx  README.md  SECURITY.md  cspell.json  docker-compose.yml  launch_claude.bat  launch_claude_server.bat  pyproject.toml  run_moa_classification.py  setup.py  temp_analysis_recovered.py
.claude/: settings.local.json
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-drafter.yml
analysis/: __init__.py  biomarker_extractor.py  bland_altman.py  dcna.py  eligibility_matcher.py  evaluation.py  filters.py  gene_expression.py  metrics.py  moa_simulation.py  models.py  responder_similarity.py  response_model.py  simulation.py  split.py  tcga_validation.py  threshold_learning.py  who_classification.py  who_extractor.py
api/: __init__.py  dependencies.py  main.py  mesh_expansion.py  middleware.py  provenance.py  schemas.py
api/routers/: analysis.py  conditions.py  ctis_router.py  export.py  moa.py  novel_therapy.py  simulation.py  tcga.py  threshold.py  trials.py  validation.py  version.py  who.py
config/: __init__.py  default_config.yaml  schema.py  version.py
connectors/: __init__.py  chembl.py  civic.py  clinicaltrials.py  ctis.py  disease_mapper.py  mesh_client.py  open_targets.py  outcome_mapper.py  tcga.py  tcga_biomarkers.py
connectors/models/: chembl.py  tcga.py  trial.py
data/: backfill_progress.json  demo_trials.json  drug_targets_cache.json  moa_survey_results.json  moa_threshold_cache.json  tcga_gbm_biomarker_prevalence.json
data/brennan2013/: NIHMS530933-supplement-03.xls  NIHMS530933-supplement-04.xlsx  NIHMS530933-supplement-05.xlsx  NIHMS530933-supplement-06.xlsx  NIHMS530933-supplement-07.xlsx  NIHMS530933-supplement-08.xlsx  NIHMS530933-supplement-09.xlsx
data/simulations/0050048b/: summary.json
data/simulations/005823bc/: summary.json
data/simulations/00984150/: summary.json
data/simulations/00ab9566/: summary.json
data/simulations/00da6bbb/: summary.json
data/simulations/01118b33/: summary.json
data/simulations/012a279c/: summary.json
data/simulations/012ab2b3/: summary.json
data/simulations/019f4537/: summary.json
data/simulations/02002c5a/: summary.json
data/simulations/023dffb8/: summary.json
data/simulations/023eeef0/: summary.json
data/simulations/0290a49b/: summary.json
data/simulations/02c60a2b/: summary.json
data/simulations/02fa4400/: summary.json
data/simulations/03d4aae2/: summary.json
data/simulations/0441857b/: summary.json
data/simulations/04d2fe03/: summary.json
data/simulations/05092587/: summary.json
data/simulations/05092df8/: summary.json
data/simulations/0536e38f/: summary.json
data/simulations/055361d5/: summary.json
data/simulations/058c5957/: summary.json
data/simulations/0632034f/: summary.json
data/simulations/06391a42/: summary.json
data/simulations/0659d7c5/: summary.json
data/simulations/067e0896/: summary.json
data/simulations/0780d38e/: summary.json
data/simulations/07d2cb40/: summary.json
data/simulations/080f0ae2/: summary.json
data/simulations/08b8b9e2/: summary.json
data/simulations/08da9a1b/: summary.json
data/simulations/091d58f1/: summary.json
data/simulations/092ba3f1/: summary.json
data/simulations/092c1165/: summary.json
data/simulations/09a4a46c/: summary.json
data/simulations/09c3d639/: summary.json
data/simulations/09da76ec/: summary.json
data/simulations/09e2398e/: summary.json
data/simulations/09efd8a2/: summary.json
data/simulations/0a217d05/: summary.json
data/simulations/0a243666/: summary.json
data/simulations/0aca0f22/: summary.json
data/simulations/0b42ed35/: summary.json
data/simulations/0b6d9177/: summary.json
data/simulations/0b91c6ed/: summary.json
data/simulations/0c189ff1/: summary.json
data/simulations/0c5adecd/: summary.json
data/simulations/0c8662dd/: summary.json
data/simulations/0ce2e9ef/: summary.json
data/simulations/0ceec9ea/: summary.json
data/simulations/0d2aed7a/: summary.json
data/simulations/0d5f45f6/: summary.json
database/: __init__.py  engine.py  etl.py  models.py  queries.py
docs/: REMOTE_ACCESS_GUIDE.md  ROADMAP.md  developer_guide.md  setup_and_usage_protocol.md  user_guide.md
frontend/: .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/.smoke/: bootstrap.js  page.html  page_transform.js  run_robustness.mjs  run_unique.mjs  util_transform.js
frontend/src/: App.tsx  index.css  main.tsx  plotly.d.ts  theme.ts
moa_classification/: __init__.py  classifier.py  drug_aliases.py  moa_categories.py  moa_shorthand.py  name_resolver.py
research/: reverse_engineer_dcna.py
scripts/: backfill_outcome_results.py  build_drug_targets_cache.py  classify_who.py  curate_missing_targets.py  enrich_tcga_1p19q.py  enrich_tcga_brennan_clinical.py  enrich_tcga_recurrence.py  import_brennan_egfrviii.py  import_civic_evidence.py  load_demo_data.py  moa_survey.py  populate_biomarker_therapy_associations.py  pull_tcga_treatments.py  refresh_glioma_trials.py  reingest_demo_trials.py  restore_overwritten_trials.py  screen_intercavitary.py  screen_outcome_rates.py  screen_response_rates.py
tests/: conftest.py  test_analysis.py  test_api.py  test_clinicaltrials.py  test_config.py  test_etl.py  test_genomics.py  test_moa.py  test_moa_shorthand.py  test_simulation.py  test_threshold.py
tests/fixtures/: sample_trial.json
tests/integration/: test_full_pipeline.py
visualization/: __init__.py  comparison_plots.py  export.py  genomic_plots.py  summary_plots.py  theme.py  threshold_plots.py
(+666 files in other folders)
