[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ct-collection-threshold-learning"
# Kept in sync with config/version.py:APP_VERSION and frontend/package.json:version.
# On every release, bump all three and update CHANGELOG.md.
version = "1.0.0"
description = "ORACLE — Oncology Response & Cohort Learning Engine. Clinical trial data analysis pipeline with MOA classification, in-silico simulation, and threshold learning."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    # HTTP
    "httpx>=0.25",
    # Visualization
    "plotly>=5.18",
    "kaleido>=0.2",
    # ML/Stats
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "statsmodels>=0.14",
    # Genomics
    "gseapy>=1.0",
    "anndata>=0.10",
    # Backend API
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
    "httpx",  # for FastAPI TestClient
    "pre-commit>=3.6",
]
# Optional: install with `pip install -e ".[sentry]"` to enable error reporting.
sentry = [
    "sentry-sdk[fastapi]>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Rule selection tailored to this codebase's conventions:
# - E   = pycodestyle errors (keep; catches real bugs)
# - F   = pyflakes           (keep; undefined names, unused imports, etc.)
# - I   = isort              (keep; import ordering)
# - W   = pycodestyle warnings (keep)
# Dropped vs. ruff default:
# - N   = pep8-naming — this codebase uses scientific naming conventions
#         (e.g. `X_train`, `MOA_COLORS`, `DCNA`) that PEP 8 flags as wrong.
#         Enforcing would require mass-renaming of domain-accurate names.
select = ["E", "F", "I", "W"]

# Rule-level exemptions within the selected sets:
ignore = [
    # Long lines are common in this codebase (docstrings + scientific
    # f-strings that read better as one line than reflowed to 100 chars).
    # Formatter will normalize real runaway cases.
    "E501",
    # Module-level imports are often placed mid-file for optional /
    # conditional deps (e.g. gseapy, anndata) so they don't pull in heavy
    # genomics libraries at boot for endpoints that don't need them.
    "E402",
]

# Per-file overrides: tests occasionally need side-effect imports + fixtures
# that trip otherwise-valid rules; a few analysis / connector modules have
# legacy unused-variable or compact-if patterns that aren't worth mass-editing.
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F841"]  # unused-variable — fixtures that exist for side effect
"scripts/**/*.py" = ["E701", "E702"]  # multi-statement lines — terse CLI helpers
# moa_simulation.py has a compact `if unit == ...: return ...` unit-conversion
# block that's more readable as one-liners than reformatted into a dict.
"analysis/moa_simulation.py" = ["E701", "E702"]
# Five pre-existing unused-variable spots in application code. Flagging here
# rather than silencing inline so a future cleanup PR can track them down.
# TODO(v1.1): remove these from the ignore list and either delete the
# assignments or wire them into the surrounding logic.
"analysis/who_extractor.py" = ["F841"]
"api/routers/analysis.py" = ["F841"]
"connectors/civic.py" = ["F841"]
"connectors/mesh_client.py" = ["F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["api", "analysis", "connectors", "database", "moa_classification", "visualization", "config"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
# Fail CI if coverage drops below this threshold (set conservatively
# since coverage was unmeasured before v1.0 — tighten over time).
fail_under = 0

[tool.setuptools.packages.find]
include = [
    "connectors*",
    "database*",
    "moa_classification*",
    "analysis*",
    "visualization*",
    "api*",
    "config*",
]
